kubernetes/pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo-sa
spec:
  serviceAccountName: demo-sa
  containers:
    - name: ubuntu
      image: ubuntu
      command:
        - "sleep"
        - "10000"
