kubernetes/cafe-service-coffee.yaml
apiVersion: v1
kind: Service
metadata:
  name: coffee-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: coffee
