kubernetes/cafe-service-tea.yaml
apiVersion: v1
kind: Service
metadata:
  name: tea-svc
  labels:
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: tea
